<resources>
    <string name="app_name">Aukcje2.0</string>
    <string name="register">Register</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="login">Log in</string>
    <string name="noAccReg">Have no account yet? Register</string>
    <string name="auction">Auction 2.0</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="settings">settings</string>
    <string name="nav_home">home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="product_photo">Photo</string>
    <string name="create_auction">Create Auction</string>
    <string name="choose_photo_s">Choose photo(s)</string>
    <string name="add_a_new_auction">Add a new Auction</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="buy_now_price">Buy Now Price</string>
    <string name="add_photo_s">Add photo(s)</string>
    <string name="start_price">Start Price</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="actual_price">Actual price:</string>
    <string name="show_picture_of_item">Show picture of item</string>
    <string name="go_back">Go back</string>
    <string name="put_into_liked">Put into liked</string>
    <string name="name_of_item">Name_of_Item</string>
    <string name="description">Description</string>
    <string name="price_of_item">Price_of_item</string>
    <string name="actual_price2">Actual Price:</string>
    <string name="my_auctions">My Auctions</string>
    <string name="edit_auction">Edit an Existing Auction</string>
    <string name="update">Update</string>
    <string name="uid">UID</string>
    <string name="data">Data</string>
    <string name="price">Price</string>
    <string name="bidders">Bidders</string>
    <string name="submit">Submit</string>
    <string name="bid">BID</string>
    <string name="date">Date</string>
    <string name="nickname">Nickname</string>
    <string name="choose_date">Choose date</string>
    <string name="prompt_nick">nickname</string>
    <string name="verify_password">Verify password</string>
    <string name="observe">observe</string>
    <string name="notifications">notifications</string>
    <string name="your_notification">your_notification</string>
    <string name="textview">TextView</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="your_email">your_email</string>
    <string name="email">email:</string>
    <string name="your_nickname">your_nickname</string>
    <string name="nickname2">nickname:</string>
    <string name="profile_description">Profile description:</string>
    <string name="edit_your_password">Edit your password</string>
    <string name="edit_your_email">Edit your email</string>
    <string name="e_mail">E-mail</string>
    <string name="email_">Email</string>
    <string name="change_your_profile">Change your profile</string>
</resources>