<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_auction"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:inputType="text"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            android:autofillHints="no"
            android:hint="@string/product_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textAlignment="inherit"
            android:textAllCaps="false"
            android:textColorHint="#8D6E63" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text_start_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="price"
                android:hint="@string/start_price"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#8D6E63"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edit_text_buy_now_price"
                android:layout_width="0dp"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/buy_now_price"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#8D6E63"
                android:autofillHints="price" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_s"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imagesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription = "@string/product_photo" />

        <Button
            android:id="@+id/button_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_photo_s" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_add_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:text="@string/choose_date" />

            <TextView
                android:id="@+id/tv_add_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_create_auction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_auction" />

    </LinearLayout>
</ScrollView>