<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_auction"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:inputType="text"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            android:autofillHints="no"
            android:hint="@string/product_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textAlignment="inherit"
            android:textAllCaps="false"
            android:textColorHint="#8D6E63" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextStartPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="price"
                android:hint="@string/start_price"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#8D6E63"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editTextBuyNowPrice"
                android:layout_width="0dp"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/buy_now_price"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#8D6E63"
                android:autofillHints="price" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_s"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/aucPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription = "@string/product_photo" />

        <Button
            android:id="@+id/button_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_photo_s" />

        <Button
            android:id="@+id/button_update_auction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/update" />




    </LinearLayout>
</ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>