<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/bid_uid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uid"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bid_data"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bid_price"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.cardview.widget.CardView>